...
                        <action selector="OBActionOne:" destination="-1" eventType="touchUpInside" id="pBT-J0-fx9"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCs-NN-MoN">
                    <rect key="frame" x="167" y="168" width="40" height="30"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <state key="normal" title="Timer"/>
                    <connections>
                        <action selector="TimerAction:" destination="-1" eventType="touchUpInside" id="NzI-OW-6J8"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Dn-yP-xHG">
                    <rect key="frame" x="152" y="206" width="71" height="30"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <state key="normal" title="Create OB"/>
                    <connections>
                        <action selector="createOB:" destination="-1" eventType="touchUpInside" id="883-Ql-IEX"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ozU-FO-m9V">
                    <rect key="frame" x="136" y="261" width="103" height="30"/>
...
