//
//  KeyPointUITests.swift
//  KeyPointUITests
//
//  Created by Jason Jiang on 2018/4/22.
//  Copyright © 2018年 Jason. All rights reserved.
//

import XCTest
import UIKit
class KeyPointUITests: XCTestCase {

    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        let app = XCUIApplication()
        app.tables/*@START_MENU_TOKEN@*/.staticTexts["RX 基础"]/*[[".cells.staticTexts[\"RX 基础\"]",".staticTexts[\"RX 基础\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Timer"].tap()
        app.buttons["Create OB"].tap()
        app.otherElements.containing(.navigationBar, identifier:"RX 基础").children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.tap()
        
    }
    
}
